--- a/Board_test/.settings/org.eclipse.wst.common.component
+++ b/Board_test/.settings/org.eclipse.wst.common.component
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                    
     
     
-    <wb-module deploy-name="Board_test">
-                                
+    
+    <wb-module deploy-name="jsp_ex">
+                                        
+        
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                
+                                        
         
         
-        <property name="java-output-path" value="/Board_test/build/classes"/>
-        <property name="context-root" value="Board_test"/>
-                            
+        
+        <property name="java-output-path" value="/jsp_ex/build/classes"/>
+        <property name="context-root" value="jsp_ex"/>
+                                    
+    
     
     
     </wb-module>
-            
+                
+
 
 
 </project-modules>
